基本完成留学申请;

--- a/app/application.html
+++ b/app/application.html
@@ -82,6 +82,10 @@
                 </label>
               </div>
               <div class="form-group">
+                <label>留学区域意愿*（如是留学申请服务，请务必填写）</label>
+                <input type="text" class="form-control"  placeholder="美国，加拿大，澳大利亚，英国">
+              </div>
+              <div class="form-group">
                 <label>姓名*（例：张小明）*</label>
                 <input type="text" class="form-control"  placeholder="张小明">
               </div>
