--- a/app/studyabroad.html
+++ b/app/studyabroad.html
@@ -62,7 +62,7 @@
           <div class="pic">
             <img src="images/wall.jpg" alt="">
             <!--文字广告区,>1200可见-->
-            <div class="mask tmp-hide visible-lg-block">
+            <div class="mask tmp-hide   hidden-md hidden-xs hidden-sm">
               <div class="slogan">
                   <h1 id="slogan-1" class="slogan-color-1 tmp-hide">999元就圆留学梦</h1>
                   <h1 id="slogan-2" class="slogan-color-2 tmp-hide">1999元全球各地任你选</h1>
@@ -75,10 +75,160 @@
               </div>
             </div>
           </div>
+          <!--顾问团队介绍-->
           <div class="section">
-            <h3>留学考试</h3>
+              <h3>顾问团队介绍</h3>
+            </div>
+            <div class="intro">
+              <p>
+                腾飞顾问团队实力雄厚，高效能干。顾问老师由国内外两支队伍组成，国内顾问老师皆有海外名校留学背景，包括哈佛大学、剑桥大学、帝国理工学院、伦敦大学学院、墨尔本大学、澳洲国立大学和麻省理工学院等名校毕业生；国外顾问老师皆是名校教授，包括XXX大学的Prof. XXX、XXX大学的Prof. XXX……
+              </p>
+              <p>
+                每一年，都有很多学生因为文书写作不佳，与心仪大学失之交臂。中国式英语、千篇一律的写作模板、重复使用的文书范文、缺乏个性的自我陈述……以上任何一点都是留学申请的致命伤！Offer从此跟你说bye bye。
+              </p>
+              <p>
+              每一年，都有很多学生在留学之路上担忧不安，写文书拖沓、递申请太晚、改文书太慢……许多学生都有过苦苦催促顾问老师的经历。作为留学服务的新标杆，腾飞的优质顾问团队会为每位学生打造独一无二的文书，并第一时间向学生汇报进度，提供全方位的留学指导。让学生舒心地度过留学申请之旅。
+              </p>
+            </div>
+            <!--end-->
+          <!--留学-->
+          <div class="section">
+            <h3>留学考试解惑</h3>
           </div>
-      </div>
+          <div class="row">
+            <div class="col-xs-12 col-md-6">
+                <!--托福-->
+                <div class="intro">
+                  <h2>托福</h2>
+                    <div class="link">
+                      <a class="link-color-1 link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>托福考试报名流程及报名步骤</a>
+                    </div>
+                    <div class="link ">
+                      <a class="link-default link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>走出“雅思易托福难”的误区</a>
+                    </div>
+                </div>
+                <!--end-->
+            </div>
+            <div class="col-xs-12 col-md-6">
+              <!--雅思-->
+              <div class="intro">
+                <h2>雅思</h2>
+                <div class="link">
+                  <a class="link-pfp  link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>雅思(IELTS)考试须知及注意事项</a>
+                </div>
+                <div class="link">
+                  <a class="link-pst  link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>雅思考试报名流程及具体步骤</a>
+                </div>
+              </div> 
+              <!--end-->
+            </div>
+          </div>
+          
+          <div class="section">
+            <h3>世界排名一览</h3>
+          </div>
+          <div class="intro">
+            <div class="row">
+              <div class="col-xs-12 col-md-6">
+                <div class="link">
+                  <a class="link-default  link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>2015—2016年QS世界大学排名200强</a>
+                </div>
+              </div>
+               <div class="col-xs-12 col-md-6">
+                <div class="link">
+                  <a class="link-color-3  link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>2016 TIMES 世界大学排名</a>
+                </div>
+              </div>
+            </div>
+          </div>       
+            
+            <div class="section">
+              <h3>留学区域资料</h3>
+            </div>
+            <!--美国-->
+            <div class="intro">
+              <h2>美国</h2>
+              <div class="row">
+                <div class="col-xs-12 col-md-4">
+                  <div class="link">
+                    <a class="link-default  link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>美国留学需要克服的主要难题</a>
+                  </div>
+                </div>
+                <div class="col-xs-12 col-md-4">
+                  <div class="link">
+                    <a class="link-color-1  link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>申请美国留学六个需要重点注意的事项</a>
+                  </div>
+                </div>
+                 <div class="col-xs-12 col-md-4">
+                  <div class="link">
+                    <a class="link-color-3  link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>    申请美国研究生需要哪些材料</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!--end-->
+            <!--加拿大-->
+            <div class="intro">
+              <h2>加拿大</h2>
+              <div class="row">
+                <div class="col-xs-12 col-md-6">
+                  <div class="link">
+                    <a class="link-pst link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>加拿大硕士留学费用介绍</a>
+                  </div>
+                </div>
+                <div class="col-xs-12 col-md-6">
+                  <div class="link">
+                    <a class="link-pfp  link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span> 加拿大留学专业怎么选</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!--end-->
+            <!--澳大利亚-->
+            <div class="intro">
+              <h2>澳大利亚</h2>
+              <div class="row">
+                <div class="col-xs-12 col-md-6">
+                  <div class="link">
+                    <a class="link-color-1 link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span> 澳洲硕士留学申请方案</a>
+                  </div>
+                </div>
+                <div class="col-xs-12 col-md-6">
+                  <div class="link">
+                    <a class="link-default  link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span> 澳洲留学研究生申请相关常识</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!--end-->
+            <!--澳大利亚-->
+            <div class="intro">
+              <h2>英国</h2>
+              <div class="row">
+                <div class="col-xs-12 col-md-6">
+                  <div class="link">
+                    <a class="link-color-3 link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span> 英国研究生申请需要满足哪些条件</a>
+                  </div>
+                </div>
+                <div class="col-xs-12 col-md-6">
+                  <div class="link">
+                    <a class="link-pfp  link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span> 英国留学读研费用详解</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!--end-->
+            <div class="section">
+              <h3>留学直通车</h3>
+            </div>
+            <div class="row">
+              <div class="col-xs-12 col-md-6">
+                <div class="link">
+                    <a class="link-default link-sm" href="application.html"><span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> 在线填写留学意愿</a>
+                  </div>
+              </div>
+            </div>
+        </div>        
     </div>
 
      <!--底部-->
