留学页面的调整

--- a/app/studyabroad.html
+++ b/app/studyabroad.html
@@ -62,7 +62,7 @@
           <div class="pic">
             <img src="images/wall.jpg" alt="">
             <!--文字广告区,>1200可见-->
-            <div class="mask tmp-hide   hidden-md hidden-xs hidden-sm">
+            <div class="mask tmp-hide">
               <div class="slogan">
                   <h1 id="slogan-1" class="slogan-color-1 tmp-hide">999元就圆留学梦</h1>
                   <h1 id="slogan-2" class="slogan-color-2 tmp-hide">1999元全球各地任你选</h1>
