新增学生之声页面

--- a/app/index.html
+++ b/app/index.html
@@ -107,7 +107,7 @@
                       在项目过程中我真切地感受到了香港给我的第一次的气息。也许是学员们和导师们认真的态度，也许是一起努力做项目漫长困顿的深夜，也许是在项目讨论中争吵起来的我们。让我顿时有了这种想法：真的很想留在这个繁忙又有点儿拥挤却很有味道的地方感受在这儿的人们是如何生活如何学习如何工作又或者是 -- 如何生存的。
 
                     </p>
-                    <p><a href="#" class="btn btn-primary" role="button">详情</a></p>
+                    <p><a href="voice.html" class="btn btn-primary" role="button">详情</a></p>
                   </div>
                 </div>
              </div>
@@ -122,7 +122,7 @@
                       在项目过程中我真切地感受到了香港给我的第一次的气息。也许是学员们和导师们认真的态度，也许是一起努力做项目漫长困顿的深夜，也许是在项目讨论中争吵起来的我们。让我顿时有了这种想法：真的很想留在这个繁忙又有点儿拥挤却很有味道的地方感受在这儿的人们是如何生活如何学习如何工作又或者是 -- 如何生存的。
 
                     </p>
-                    <p><a href="#" class="btn btn-primary" role="button">详情</a></p>
+                    <p><a href="voice.html" class="btn btn-primary" role="button">详情</a></p>
                   </div>
                 </div>
              </div>
@@ -137,7 +137,7 @@
                       在项目过程中我真切地感受到了香港给我的第一次的气息。也许是学员们和导师们认真的态度，也许是一起努力做项目漫长困顿的深夜，也许是在项目讨论中争吵起来的我们。让我顿时有了这种想法：真的很想留在这个繁忙又有点儿拥挤却很有味道的地方感受在这儿的人们是如何生活如何学习如何工作又或者是 -- 如何生存的。
 
                     </p>
-                    <p><a href="#" class="btn btn-primary" role="button">详情</a></p>
+                    <p><a href="voice.html" class="btn btn-primary" role="button">详情</a></p>
                   </div>
                 </div>
              </div>
@@ -153,7 +153,7 @@
                       在项目过程中我真切地感受到了香港给我的第一次的气息。也许是学员们和导师们认真的态度，也许是一起努力做项目漫长困顿的深夜，也许是在项目讨论中争吵起来的我们。让我顿时有了这种想法：真的很想留在这个繁忙又有点儿拥挤却很有味道的地方感受在这儿的人们是如何生活如何学习如何工作又或者是 -- 如何生存的。
 
                     </p>
-                    <p><a href="#" class="btn btn-primary" role="button">详情</a></p>
+                    <p><a href="voice.html" class="btn btn-primary" role="button">详情</a></p>
                   </div>
                 </div>
              </div>
