--- a/app/pfp.html
+++ b/app/pfp.html
@@ -65,7 +65,13 @@
                     <div class="container">
                        <h1>项目简介</h1>
                       <p>
-                         PFP香港培训项目，旨在让内地学生与国际金融市场接轨，获得境外实习培训机会。本着以学生为本的理念，PFP将为学员打造多元化项目，其中包括投资银行商演、实战投资、模拟求职、商业报告书，为学员的未来之路奠定稳固根基，缔造非凡人生。PFP是全球首创项目，与纯粹的参观活动不同，学员将会到国际知名投行和五百强公司上课，近距离接触世界名企文化，表现优异者，更有机会获得投行全球总部为期半年实习培训的机会。此外，PFP学员还可以到四大投行及世界五百强公司的总部观摩，交流学习，亲身体验在投资银行工作的氛围，感受投资银行快节奏与高强度的工作带来的愉悦感。公司包括：(Julius Baer，Merrill Lynch，Macquarie Bank，UBS and AIA)。
+                         PFP香港培训项目，旨在让内地学生与国际金融市场接轨，获得境外实习培训机会。本着以学生为本的理念，PFP将为学员打造多元化项目，其中包括投资银行商演、实战投资、模拟求职、商业报告书，为学员的未来之路奠定稳固根基，缔造非凡人生。
+                      </p>
+                      <p>
+                        PFP是全球首创项目，与纯粹的参观活动不同，学员将会到国际知名投行和五百强公司上课，近距离接触世界名企文化，表现优异者，更有机会获得投行全球总部为期半年实习培训的机会。
+                      </p>
+                      <p>
+                        此外，PFP学员还可以到四大投行及世界五百强公司的总部观摩，交流学习，亲身体验在投资银行工作的氛围，感受投资银行快节奏与高强度的工作带来的愉悦感。公司包括：(Julius Baer，Merrill Lynch，Macquarie Bank，UBS and AIA)。
                       </p>
                     </div>
                   </div>
