--- a/app/application.html
+++ b/app/application.html
@@ -2,8 +2,8 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8">
-    <title>申请报名表</title>
-    <meta name="description" content="腾飞项目报名表">
+    <title>腾飞教育-申请报名表</title>
+    <meta name="description" content="腾飞游学-实习-留学的项目报名表">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0,user-scalable=no" id="viewport">
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
