--- a/app/guide.html
+++ b/app/guide.html
@@ -2,8 +2,8 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8">
-    <title>申请指南</title>
-    <meta name="description" content="腾飞项目申请指南">
+    <title>腾飞教育-项目申请指南</title>
+    <meta name="description" content="腾飞教育项目申请指南">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0,user-scalable=no" id="viewport">
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
