--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,8 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8">
-    <title>腾飞</title>
-    <meta name="description" content="">
+    <title>腾飞教育-首创的游学-实习-留学一体化项目</title>
+    <meta name="description" content="腾飞教育首创PFP游学，PST实习，留学一体化项目">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
@@ -71,7 +71,7 @@
             <div class="col-md-6">
                 <div class="jumbotron">
                   <div class="container">
-                     <h1>公司简介</h1>
+                     <h1>腾飞教育简介</h1>
                     <p>
                        腾飞教育系香港一间综合型教育实习培训机构，由来自世界一流名校的专业人士组成核心管理团队。公司现有全球首创的“游学-实习-留学”一体化项目，并邀请了多间常青藤高校、国际知名投行与世界500强企业加盟。
                     </p>
@@ -82,7 +82,7 @@
             <div class="col-md-6">
                  <div class="jumbotron">
                      <div class="container">
-                        <h1>公司宗旨</h1>
+                        <h1>腾飞教育宗旨</h1>
                         <p>
                            腾飞遵循个性化、多元化和国际化的发展模式，本着以学生为本的理念，为各位学员量身打造个性化的项目内容，提供一系列的实战培训，为学生未来的发展打稳根基，让在校大学生提早做好职业规划，缔造非凡人生。
                         </p>
