--- a/app/news.html
+++ b/app/news.html
@@ -2,8 +2,8 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8">
-    <title>正文</title>
-    <meta name="description" content="正文内容摘要">
+    <title>腾飞教育-{#title}</title>
+    <meta name="description" content="{$abtract}">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0,user-scalable=no" id="viewport">
 
     <link rel="shortcut icon" href="/favicon.ico">
