--- a/app/pfp.html
+++ b/app/pfp.html
@@ -2,8 +2,8 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8">
-    <title>PFP金融项目</title>
-    <meta name="description" content="腾飞PFP金融项目介绍">
+    <title>腾飞教育-PFP金融项目-投行培训实习</title>
+    <meta name="description" content="腾飞PFP金融项目,投行培训实习">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0,user-scalable=no" id="viewport">
 
     <link rel="shortcut icon" href="/favicon.ico">
