--- a/app/pst.html
+++ b/app/pst.html
@@ -2,8 +2,8 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8">
-    <title>PST金融项目</title>
-    <meta name="description" content="腾飞PST项目介绍">
+    <title>腾飞教育-PST游学项目-齐聚美国常青藤</title>
+    <meta name="description" content="腾飞PST游学,齐聚美国常青藤">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0,user-scalable=no" id="viewport">
 
     <link rel="shortcut icon" href="/favicon.ico">
