--- a/app/schedule.html
+++ b/app/schedule.html
@@ -2,8 +2,8 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8">
-    <title>日常安排</title>
-    <meta name="description" content="腾飞项目日程表">
+    <title>腾飞教育-PFP，PST的日程安排</title>
+    <meta name="description" content="腾飞PFP金融，PST游学的日程表">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0,user-scalable=no" id="viewport">
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
