--- a/app/studyabroad.html
+++ b/app/studyabroad.html
@@ -2,8 +2,8 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8">
-    <title>留学申请</title>
-    <meta name="description" content="留学申请">
+    <title>腾飞教育-留学申请-首创平价游学</title>
+    <meta name="description" content="腾飞教育,平价留学">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0,user-scalable=no" id="viewport">
 
     <link rel="shortcut icon" href="/favicon.ico">
