--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
     <!--大图区-->
     <div class="bgpic">
         <div class="row">
-          <img class="hidden-xs hidden-sm col-md-12"src="images/bg-1.jpg" alt="">
+          <img class="hidden-xs hidden-sm col-md-12"src="images/bg-1.jpg" alt="腾飞教育">
         </div>
     </div>
 
