--- a/app/studyabroad.html
+++ b/app/studyabroad.html
@@ -60,7 +60,7 @@
       <div class="container">
           <!--图区，广告-->
           <div class="pic">
-            <img src="images/wall.jpg" alt="">
+            <img src="images/wall.jpg" alt="腾飞教育">
             <!--文字广告区,>1200可见-->
             <div class="mask tmp-hide">
               <div class="slogan">
@@ -123,7 +123,7 @@
               <!--end-->
             </div>
           </div>
-          
+
           <div class="section">
             <h3>世界排名一览</h3>
           </div>
@@ -140,8 +140,8 @@
                 </div>
               </div>
             </div>
-          </div>       
-            
+          </div>
+
             <div class="section">
               <h3>留学区域资料</h3>
             </div>
