--- a/app/pst.html
+++ b/app/pst.html
@@ -63,7 +63,7 @@
                 <div class="project-heading">
                     <div class="jumbotron">
                     <div class="container">
-                       <h1>项目简介</h1>
+                       <h1>PST游学项目</h1>
                       <p>
                          腾飞教育针对全国在校大学生特别开创了“腾飞美国项目”。</p>
                         <p>  在这里,你将收获真挚的友谊。一群来自全国各地有梦想、有潜力、有才华的年轻人将会聚集在一起,在逐梦的道路上并肩前行。</p>
