--- a/app/pfp.html
+++ b/app/pfp.html
@@ -63,7 +63,7 @@
                 <div class="project-heading">
                     <div class="jumbotron">
                     <div class="container">
-                       <h1>项目简介</h1>
+                       <h1>PFP金融项目简介</h1>
                       <p>
                          PFP香港培训项目，旨在让内地学生与国际金融市场接轨，获得境外实习培训机会。本着以学生为本的理念，PFP将为学员打造多元化项目，其中包括投资银行商演、实战投资、模拟求职、商业报告书，为学员的未来之路奠定稳固根基，缔造非凡人生。
                       </p>
