--- a/app/schedule.html
+++ b/app/schedule.html
@@ -156,7 +156,7 @@
               </div>
               <!--end-->
               <div class="link">
-                <a  class="link-pfp" href=""><span class="glyphicon glyphicon-save" aria-hidden="true"></span>PFP金融项目日程安排.doc</a>
+                <a  class="link-pfp" href=""><span class="glyphicon glyphicon-save" aria-hidden="true"></span>PFP金融项目日程安排</a>
               </div>
           </div>
           <div class="col-xs-12 col-md-6">
@@ -193,7 +193,6 @@
                             自由时间
                           </div>
                         </div>
-                       
                     </div>
 
                   </caption>
@@ -301,7 +300,7 @@
               </div>
               <!--end-->
               <div class="link">
-                <a  class="link-pst" href=""><span class="glyphicon glyphicon-save" aria-hidden="true"></span>PST游学项目日程安排.doc</a>
+                <a  class="link-pst" href=""><span class="glyphicon glyphicon-save" aria-hidden="true"></span>PST游学项目日程安排</a>
               </div>
           </div>
         </div>
