--- a/app/voice.html
+++ b/app/voice.html
@@ -2,8 +2,8 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8">
-    <title>学生之声</title>
-    <meta name="description" content="学生之声全文">
+    <title>腾飞教育-{$title}</title>
+    <meta name="description" content="{$abstract}">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0,user-scalable=no" id="viewport">
 
     <link rel="shortcut icon" href="/favicon.ico">
@@ -89,10 +89,10 @@
           </div>
           <div class="intro">
             <div class="link">
-              <a class="link-color-base" href="news.html"><span class="glyphicon glyphicon-heart-empty" aria-hidden="true">标题（Jessie）</a>
+              <a class="link-color-base link-sm" href="news.html"><span class="glyphicon glyphicon-heart-empty" aria-hidden="true">标题（Jessie）</a>
             </div>
             <div class="link">
-              <a class="link-color-base" href="news.html"><span class="glyphicon glyphicon-heart-empty" aria-hidden="true">标题（ Laura）</a>
+              <a class="link-color-base link-sm" href="news.html"><span class="glyphicon glyphicon-heart-empty" aria-hidden="true">标题（ Laura）</a>
             </div>
             <a class="back" href="index.html">返回首页</a>
           </div>
