--- a/app/application.html
+++ b/app/application.html
@@ -82,11 +82,11 @@
                 </label>
               </div>
               <div class="form-group">
-                <label>留学区域意愿*（如是留学申请服务，请务必填写）</label>
+                <label>留学区域意愿*（如是留学申请，请务必填写）</label>
                 <input type="text" class="form-control"  placeholder="美国，加拿大，澳大利亚，英国">
               </div>
               <div class="form-group">
-                <label>姓名*（例：张小明）*</label>
+                <label>姓名*（例：张小明）</label>
                 <input type="text" class="form-control"  placeholder="张小明">
               </div>
               <label>性别*</label>
@@ -146,6 +146,7 @@
               <textarea class="form-control" rows="8"></textarea>
               <label>个人获奖情况（校内外）</label>
               <textarea class="form-control" rows="8"></textarea>
+              <label>以上填写资料请务必真实有效，我们的工作人员会在核证后，会尽量处理您的申请！</label>
                <button type="submit" class="btn btn-default">提交</button>
             </form>
         </div>
