--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>腾飞教育-首创的游学-实习-留学一体化项目</title>
-    <meta name="description" content="腾飞教育首创PFP游学，PST实习，留学一体化项目">
+    <meta name="description" content="腾飞教育首创PFP实习，PST游学，留学一体化项目">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
@@ -41,7 +41,7 @@
                  <div id="navbar" class="navbar-collapse collapse" >
                       <ul class="nav navbar-nav navbar-right">
                          <li><a href="index.html">首页</a></li>
-                         <li><a href="pfp.html">PFP金融项目</a></li>
+                         <li><a href="pfp.html">PFP香港项目</a></li>
                          <li><a href="pst.html">PST游学项目</a></li>
                          <li><a href="schedule.html">日程安排</a></li>
                           <li><a href="studyabroad.html">留学申请</a></li>
@@ -64,7 +64,7 @@
     <div class="content">
       <div class="container inner">
          <div class="section">
-            <h3>Company & Project</h3>
+            <h3>PAL Mission & Vision</h3>
           </div>
           <div class="row">
             <!--左边 公司简介-->
@@ -266,8 +266,8 @@
         <address>
           <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
           Phone:<br>
-          HONGKONG TEL：+（852）37570899 <br>
-          CHINA TEL：+（86）15913179974 <br>
+          HongKong TEL：+（852）37570899 <br>
+          China TEL：+（86）15913179974 <br>
         </address>
 
         <!--email-->
