--- a/app/news.html
+++ b/app/news.html
@@ -43,7 +43,7 @@
                  <div id="navbar" class="navbar-collapse collapse" >
                       <ul class="nav navbar-nav navbar-right">
                          <li><a href="index.html">首页</a></li>
-                         <li><a href="pfp.html">PFP金融项目</a></li>
+                         <li><a href="pfp.html">PFP香港项目</a></li>
                          <li><a href="pst.html">PST游学项目</a></li>
                          <li><a href="schedule.html">日程安排</a></li>
                           <li><a href="studyabroad.html">留学申请</a></li>
@@ -146,8 +146,8 @@
         <address>
           <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
           Phone:<br>
-          HONGKONG TEL：+（852）37570899 <br>
-          CHINA TEL：+（86）15913179974 <br>
+          HongKong TEL：+（852）37570899 <br>
+          China TEL：+（86）15913179974 <br>
         </address>
 
         <!--email-->
