--- a/app/pfp.html
+++ b/app/pfp.html
@@ -2,8 +2,8 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8">
-    <title>腾飞教育-PFP金融项目-投行培训实习</title>
-    <meta name="description" content="腾飞PFP金融项目,投行培训实习">
+    <title>腾飞教育-PFP香港项目-投行培训实习</title>
+    <meta name="description" content="腾飞PFP香港项目,投行培训实习">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0,user-scalable=no" id="viewport">
 
     <link rel="shortcut icon" href="/favicon.ico">
@@ -43,7 +43,7 @@
                  <div id="navbar" class="navbar-collapse collapse" >
                       <ul class="nav navbar-nav navbar-right">
                          <li><a href="index.html">首页</a></li>
-                         <li><a href="pfp.html">PFP金融项目</a></li>
+                         <li><a href="pfp.html">PFP香港项目</a></li>
                          <li><a href="pst.html">PST游学项目</a></li>
                          <li><a href="schedule.html">日程安排</a></li>
                           <li><a href="studyabroad.html">留学申请</a></li>
@@ -63,7 +63,7 @@
                 <div class="project-heading">
                     <div class="jumbotron">
                     <div class="container">
-                       <h1>PFP金融项目简介</h1>
+                       <h1>PFP香港项目</h1>
                       <p>
                          PFP香港培训项目，旨在让内地学生与国际金融市场接轨，获得境外实习培训机会。本着以学生为本的理念，PFP将为学员打造多元化项目，其中包括投资银行商演、实战投资、模拟求职、商业报告书，为学员的未来之路奠定稳固根基，缔造非凡人生。
                       </p>
@@ -302,8 +302,8 @@
         <address>
           <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
           Phone:<br>
-          HONGKONG TEL：+（852）37570899 <br>
-          CHINA TEL：+（86）15913179974 <br>
+          HongKong TEL：+（852）37570899 <br>
+          China TEL：+（86）15913179974 <br>
         </address>
 
         <!--email-->
