--- a/app/studyabroad.html
+++ b/app/studyabroad.html
@@ -43,7 +43,7 @@
                  <div id="navbar" class="navbar-collapse collapse" >
                       <ul class="nav navbar-nav navbar-right">
                          <li><a href="index.html">首页</a></li>
-                         <li><a href="pfp.html">PFP金融项目</a></li>
+                         <li><a href="pfp.html">PFP香港项目</a></li>
                          <li><a href="pst.html">PST游学项目</a></li>
                          <li><a href="schedule.html">日程安排</a></li>
                           <li><a href="studyabroad.html">留学申请</a></li>
@@ -211,166 +211,53 @@
           <div class="section">
             <h3>留学考试资料区</h3>
           </div>
-          <div class="row">
-            <div class="col-xs-12 col-md-6">
-                <div class="intro">
-                   <!--托福-->
-                  <h4>托福</h4>
-                    <div class="link">
-                      <a class="link-color-1 link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>托福考试报名流程及报名步骤</a>
-                    </div>
-                    <div class="link ">
-                      <a class="link-default link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>走出“雅思易托福难”的误区</a>
-                    </div>
-                  <!--end-->
-                  <!--SAT-->
-                  <h4>SAT</h4>
-                  <div class="link">
-                      <a class="link-color-3 link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>SAT报名流程</a>
-                  </div>
-                   <!--end-->
-                   <!--GRE-->
-                    <h4>GRE</h4>
-                    <div class="link">
-                      <a class="link-pst  link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>GRE网上报名程序说明</a>
-                    </div>
-                <!--end-->
-                </div>
-            </div>
-            <div class="col-xs-12 col-md-6">
-              <div class="intro">
-                <!--雅思-->
-                <h4>雅思</h4>
-                <div class="link">
-                  <a class="link-pfp  link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>雅思(IELTS)考试须知及注意事项</a>
-                </div>
-                <div class="link">
-                  <a class="link-pst  link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>雅思考试报名流程及具体步骤</a>
-                </div>
-                <!--end-->
-                <!--GMAT-->
-                <h4>GMAT</h4>
-                <div class="link">
-                  <a class="link-color-1 link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>GMAT考试需知</a>
-                </div>
-                <!--end-->
-              </div> 
-            </div>
+          <div class="list-group">
+            <a href="#" class="list-group-item"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>【托福】托福考试报名流程及报名步骤</a>
+            <a href="#" class="list-group-item"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>【托福】走出“雅思易托福难”的误区</a>
+            <a href="#" class="list-group-item"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>【SAT】SAT报名流程</a>
+            <a href="#" class="list-group-item"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>【GRE】GRE网上报名程序说明</a>
+            <a href="#" class="list-group-item"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>【雅思】雅思(IELTS)考试须知及注意事项</a>
+            <a href="#" class="list-group-item"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>【雅思】雅思考试报名流程及具体步骤</a>
+            <a href="#" class="list-group-item"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>【GMAT】GMAT考试需知</a>
           </div>
-
+        <!--世界排名-->
           <div class="section">
             <h3>世界排名一览</h3>
           </div>
-          <div class="intro">
-            <div class="row">
-              <div class="col-xs-12 col-md-6">
-                <div class="link">
-                  <a class="link-default  link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>2015—2016年QS世界大学排名200强</a>
-                </div>
-              </div>
-               <div class="col-xs-12 col-md-6">
-                <div class="link">
-                  <a class="link-color-3  link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>2016 TIMES 世界大学排名</a>
-                </div>
-              </div>
-            </div>
+          <div class="list-group">
+            <a href="" class="list-group-item"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>&nbsp;2015—2016年QS世界大学排名200强</a>
+            <a href="" class="list-group-item"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>&nbsp;2016 TIMES 世界大学排名</a>
           </div>
-
             <div class="section">
               <h3>留学区域资料</h3>
             </div>
-            <!--美国-->
-            <div class="intro">
-              <h4>美国</h4>
-              <div class="row">
-                <div class="col-xs-12 col-md-4">
-                  <div class="link">
-                    <a class="link-default  link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>美国留学需要克服的主要难题</a>
-                  </div>
-                </div>
-                <div class="col-xs-12 col-md-4">
-                  <div class="link">
-                    <a class="link-color-1  link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>申请美国留学六个需要重点注意的事项</a>
-                  </div>
-                </div>
-                 <div class="col-xs-12 col-md-4">
-                  <div class="link">
-                    <a class="link-color-3  link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>    申请美国研究生需要哪些材料</a>
-                  </div>
-                </div>
-              </div>
+            <div class="list-group">
+              <h4 class="list-group-item active">美国</h4>
+              <a href="" class="list-group-item"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>&nbsp;美国留学需要克服的主要难题</a>
+              <a href="" class="list-group-item"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>&nbsp;申请美国留学六个需要重点注意的事项</a>
+              <a href="" class="list-group-item"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>&nbsp;申请美国研究生需要哪些材料</a>
             </div>
-            <!--end-->
-            <!--加拿大-->
-            <div class="intro">
-              <h4>加拿大</h4>
-              <div class="row">
-                <div class="col-xs-12 col-md-6">
-                  <div class="link">
-                    <a class="link-pst link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>加拿大硕士留学费用介绍</a>
-                  </div>
-                </div>
-                <div class="col-xs-12 col-md-6">
-                  <div class="link">
-                    <a class="link-pfp  link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span> 加拿大留学专业怎么选</a>
-                  </div>
-                </div>
-              </div>
+             <div class="list-group">
+              <h4 class="list-group-item active">加拿大</h4>
+              <a href="" class="list-group-item"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>&nbsp;加拿大硕士留学费用介绍</a>
+              <a href="" class="list-group-item"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>&nbsp;加拿大留学专业怎么选</a>
             </div>
-            <!--end-->
-            <!--澳大利亚-->
-            <div class="intro">
-              <h4>澳大利亚</h4>
-              <div class="row">
-                <div class="col-xs-12 col-md-6">
-                  <div class="link">
-                    <a class="link-color-1 link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span> 澳洲硕士留学申请方案</a>
-                  </div>
-                </div>
-                <div class="col-xs-12 col-md-6">
-                  <div class="link">
-                    <a class="link-default  link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span> 澳洲留学研究生申请相关常识</a>
-                  </div>
-                </div>
-              </div>
+            <div class="list-group">
+              <h4 class="list-group-item active">澳大利亚</h4>
+              <a href="" class="list-group-item"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>&nbsp;澳洲硕士留学申请方案</a>
+              <a href="" class="list-group-item"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>&nbsp;澳洲留学研究生申请相关常识</a>
             </div>
-            <!--end-->
-            <!--英国-->
-            <div class="intro">
-              <h4>英国</h4>
-              <div class="row">
-                <div class="col-xs-12 col-md-6">
-                  <div class="link">
-                    <a class="link-color-3 link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span> 英国研究生申请需要满足哪些条件</a>
-                  </div>
-                </div>
-                <div class="col-xs-12 col-md-6">
-                  <div class="link">
-                    <a class="link-pfp  link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span> 英国留学读研费用详解</a>
-                  </div>
-                </div>
-              </div>
+            <div class="list-group">
+              <h4 class="list-group-item active">英国</h4>
+              <a href="" class="list-group-item"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>&nbsp;英国研究生申请需要满足哪些条件</a>
+              <a href="" class="list-group-item"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>&nbsp;英国留学读研费用详解</a>
             </div>
-            <!--end-->
-            <!--香港-->
-            <div class="intro">
-              <h4>香港</h4>
-              <div class="row">
-                <div class="col-xs-12 col-md-6">
-                  <div class="link">
-                    <a class="link-pst link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span> 解析香港留学费用现状</a>
-                  </div>
-                </div>
-                <div class="col-xs-12 col-md-6">
-                  <div class="link">
-                    <a class="link-color-1  link-sm" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-save" aria-hidden="true"></span> 香港留学读研有哪些优势</a>
-                  </div>
-                </div>
-              </div>
+            <div class="list-group">
+              <h4 class="list-group-item active">香港</h4>
+              <a href="" class="list-group-item"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>&nbsp;解析香港留学费用现状</a>
+              <a href="" class="list-group-item"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>&nbsp;香港留学读研有哪些优势</a>
             </div>
-            <!--end-->
-            
-        </div>        
+        </div>
     </div>
 
      <!--底部-->
@@ -392,8 +279,8 @@
         <address>
           <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
           Phone:<br>
-          HONGKONG TEL：+（852）37570899 <br>
-          CHINA TEL：+（86）15913179974 <br>
+          HongKong TEL：+（852）37570899 <br>
+          China TEL：+（86）15913179974 <br>
         </address>
 
         <!--email-->
@@ -429,7 +316,7 @@
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
     <!-- endbuild -->
-    <!-- build:js(.) scripts/studyabroad.js -->
+    <!-- build:js scripts/studyabroad.js -->
     <script src="scripts/studyabroad.js"></script>
     <!--endbuild-->
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
