最后一次大修改

--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
                          <li><a href="pfp.html">PFP香港项目</a></li>
                          <li><a href="pst.html">PST游学项目</a></li>
                          <li><a href="schedule.html">日程安排</a></li>
-                          <li><a href="studyabroad.html">留学申请</a></li>
+                          <li><a href="studyabroad.html">留学服务</a></li>
                          <li><a href="guide.html">申请指南</a></li>
                          <li><a class="navbar-pal-btn" href="application.html">在线申请</a></li>
                       </ul>
@@ -99,9 +99,9 @@
              <!--Echo-->
               <div class="col-sm-6 col-md-3">
                 <div class="thumbnail">
-                  <img class="img-responsive" src="images/Echo.jpg">
+                  <img class="img-responsive" src="images/wanwen.png">
                   <div class="caption">
-                    <h3>Echo</h3>
+                    <h3>婉雯</h3>
                     <p>
                       说起来去年寒假到香港参加PFP这个项目才是真正促进我努力争取香港理工大学exchange的最大动力。
                       在项目过程中我真切地感受到了香港给我的第一次的气息。也许是学员们和导师们认真的态度，也许是一起努力做项目漫长困顿的深夜，也许是在项目讨论中争吵起来的我们。让我顿时有了这种想法：真的很想留在这个繁忙又有点儿拥挤却很有味道的地方感受在这儿的人们是如何生活如何学习如何工作又或者是 -- 如何生存的。
@@ -114,7 +114,7 @@
                <!--Echo-->
               <div class="col-sm-6 col-md-3">
                 <div class="thumbnail">
-                  <img src="images/Echo.jpg">
+                  <img src="images/Echo.png">
                   <div class="caption">
                     <h3>Echo</h3>
                     <p>
@@ -129,9 +129,9 @@
              <!--Echo-->
               <div class="col-sm-6 col-md-3">
                 <div class="thumbnail">
-                  <img src="images/Echo.jpg">
+                  <img src="images/Jessie.png">
                   <div class="caption">
-                    <h3>Echo</h3>
+                    <h3>Jessie</h3>
                     <p>
                       说起来去年寒假到香港参加PFP这个项目才是真正促进我努力争取香港理工大学exchange的最大动力。
                       在项目过程中我真切地感受到了香港给我的第一次的气息。也许是学员们和导师们认真的态度，也许是一起努力做项目漫长困顿的深夜，也许是在项目讨论中争吵起来的我们。让我顿时有了这种想法：真的很想留在这个繁忙又有点儿拥挤却很有味道的地方感受在这儿的人们是如何生活如何学习如何工作又或者是 -- 如何生存的。
@@ -145,9 +145,9 @@
               <!--Echo-->
               <div class="col-sm-6 col-md-3">
                 <div class="thumbnail">
-                  <img src="images/Echo.jpg">
+                  <img src="images/Laura.png">
                   <div class="caption">
-                    <h3>Echo</h3>
+                    <h3>Laura</h3>
                     <p>
                       说起来去年寒假到香港参加PFP这个项目才是真正促进我努力争取香港理工大学exchange的最大动力。
                       在项目过程中我真切地感受到了香港给我的第一次的气息。也许是学员们和导师们认真的态度，也许是一起努力做项目漫长困顿的深夜，也许是在项目讨论中争吵起来的我们。让我顿时有了这种想法：真的很想留在这个繁忙又有点儿拥挤却很有味道的地方感受在这儿的人们是如何生活如何学习如何工作又或者是 -- 如何生存的。
@@ -257,10 +257,15 @@
           UNIT 1104A，11/F，KAI TAK COMM. BLDG. 317-319 DES VOEUX ROAD, CENTRAL, HONG KONG<br>
           香港上环德辅路中317-319号启德商业大厦11楼1104A室<br>
         </address>
-         <!--微信公共号-->
+        <!--微信公共号-->
         <address>
           <strong><span class="glyphicon glyphicon-qrcode" aria-hidden="true"></span>WeChat ID</strong><br>
-          pal-hk<br>
+          <h4>PAL公众号</h4>
+          <img src="images/pal.png" alt="pal微信二维码"><br>
+          <h4>客服专员Isaac</h4>
+          <img src="images/Issac.png" alt="Issac微信二维码"><br>
+          <h4>客服专员Phyllis</h4>
+          <img src="images/Phyllis.png" alt="Phyllis微信二维码">
         </address>
         <!--电话-->
         <address>
