--- a/app/voice.html
+++ b/app/voice.html
@@ -46,7 +46,7 @@
                          <li><a href="pfp.html">PFP香港项目</a></li>
                          <li><a href="pst.html">PST游学项目</a></li>
                          <li><a href="schedule.html">日程安排</a></li>
-                          <li><a href="studyabroad.html">留学申请</a></li>
+                          <li><a href="studyabroad.html">留学服务</a></li>
                          <li><a href="guide.html">申请指南</a></li>
                          <li><a class="navbar-pal-btn" href="application.html">在线申请</a></li>
                       </ul>
@@ -116,7 +116,12 @@
         <!--微信公共号-->
         <address>
           <strong><span class="glyphicon glyphicon-qrcode" aria-hidden="true"></span>WeChat ID</strong><br>
-          pal-hk<br>
+          <h4>PAL公众号</h4>
+          <img src="images/pal.png" alt="pal微信二维码"><br>
+          <h4>客服专员Isaac</h4>
+          <img src="images/Issac.png" alt="Issac微信二维码"><br>
+          <h4>客服专员Phyllis</h4>
+          <img src="images/Phyllis.png" alt="Phyllis微信二维码">
         </address>
         <!--电话-->
         <address>
