小修改,广告调整

--- a/app/case.html
+++ b/app/case.html
@@ -117,11 +117,11 @@
         <!--微信公共号-->
         <address>
           <strong><span class="glyphicon glyphicon-qrcode" aria-hidden="true"></span>WeChat ID</strong><br>
-          <h4>PAL公众号</h4>
+          <h4>Wechat Official Account</h4>
           <img src="images/pal.png" alt="pal微信二维码"><br>
-          <h4>客服专员Isaac</h4>
+          <h4>Mentor Isaac</h4>
           <img src="images/Issac.png" alt="Issac微信二维码"><br>
-          <h4>客服专员Phyllis</h4>
+          <h4>CS Phyllis</h4>
           <img src="images/Phyllis.png" alt="Phyllis微信二维码">
         </address>
         <!--电话-->
