--- a/app/studyabroad.html
+++ b/app/studyabroad.html
@@ -60,21 +60,9 @@
       <div class="container">
           <!--图区，广告-->
           <div class="pic">
-            <img src="images/wall.jpg" alt="腾飞教育">
+            <img class="wall" src="images/wall.png" alt="腾飞教育">
             <!--文字广告区,>1200可见-->
-            <div class="mask tmp-hide">
-              <div class="slogan">
-                  <h1 id="slogan-1" class="slogan-color-1 tmp-hide">999元就圆留学梦!</h1>
-                  <h1 id="slogan-2" class="slogan-color-2 tmp-hide">1999元全球各地任你选!</h1>
-                  <h1 id="slogan-3" class="slogan-color-3 tmp-hide">腾飞平价留学，全国独家首创</h1>
-                  <div class="slogan-detail tmp-hide">
-                    <p>每年，都有91%的学生无缘心仪大学!</p>
-                    <p>每年，都有24%的学生因为漏洞百出的文书被高校拒之门外!</p>
-                    <p>每年，主考官都要处理数千分入学申请，你，只有15分钟！</p>
-                    <p>腾飞，给你一个不一样的留学之旅！</p>
-                  </div>
-              </div>
-            </div>
+            <img class="slogan animated fadeIn" src="images/wall_text.png" alt="广告语">
           </div>
           <!--腾飞留学介绍-->
           <div class="section">
@@ -305,11 +293,11 @@
         <!--微信公共号-->
         <address>
           <strong><span class="glyphicon glyphicon-qrcode" aria-hidden="true"></span>WeChat ID</strong><br>
-          <h4>PAL公众号</h4>
+         <h4>Wechat Official Account</h4>
           <img src="images/pal.png" alt="pal微信二维码"><br>
-          <h4>客服专员Isaac</h4>
+          <h4>Mentor Isaac</h4>
           <img src="images/Issac.png" alt="Issac微信二维码"><br>
-          <h4>客服专员Phyllis</h4>
+          <h4>CS Phyllis</h4>
           <img src="images/Phyllis.png" alt="Phyllis微信二维码">
         </address>
         <!--电话-->
@@ -353,9 +341,7 @@
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
     <!-- endbuild -->
-    <!-- build:js scripts/studyabroad.js -->
-    <script src="scripts/studyabroad.js"></script>
-    <!--endbuild-->
+    
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
