--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                     </button>
-                     <a class="navbar-brand" href="#">腾飞策划</a>
+                     <a  href="#"><img  class="logo" src="images/logo.png" alt="pal logo"></a>
                  </div>
                  <div id="navbar" class="navbar-collapse collapse" >
                       <ul class="nav navbar-nav navbar-right">
@@ -55,9 +55,8 @@
 
     <!--大图区-->
     <div class="bgpic">
-        <div class="row">
-          <img class="hidden-xs hidden-sm col-md-12"src="images/bg-1.jpg" alt="腾飞教育">
-        </div>
+          <img class="bg" src="images/bg-1.jpg" alt="腾飞教育">
+          <h1 class="slogan animated fadeIn">腾飞教育</h1>
     </div>
 
     <!--内容区-->
@@ -101,7 +100,7 @@
                 <div class="thumbnail">
                   <img class="img-responsive" src="images/wanwen.png">
                   <div class="caption">
-                    <h3>婉雯</h3>
+                    <h3>Vanviner</h3>
                     <p>
                       说起来去年寒假到香港参加PFP这个项目才是真正促进我努力争取香港理工大学exchange的最大动力。
                       在项目过程中我真切地感受到了香港给我的第一次的气息。也许是学员们和导师们认真的态度，也许是一起努力做项目漫长困顿的深夜，也许是在项目讨论中争吵起来的我们。让我顿时有了这种想法：真的很想留在这个繁忙又有点儿拥挤却很有味道的地方感受在这儿的人们是如何生活如何学习如何工作又或者是 -- 如何生存的。
