--- a/app/case.html
+++ b/app/case.html
@@ -38,7 +38,7 @@
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                     </button>
-                     <a class="navbar-brand" href="#">腾飞策划</a>
+                     <a  href="#"><img  class="logo" src="images/logo.png" alt="pal logo"></a>
                  </div>
                  <div id="navbar" class="navbar-collapse collapse" >
                       <ul class="nav navbar-nav navbar-right">
