加入图片加载判断

--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
     <!--大图区-->
     <div class="bgpic">
           <img class="bg" src="images/bg-1.jpg" alt="腾飞教育">
-          <h1 class="slogan animated fadeIn">腾飞教育</h1>
+          <h1 class="slogan animated">腾飞教育</h1>
     </div>
 
     <!--内容区-->
@@ -305,7 +305,9 @@
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
     <!-- endbuild -->
-
+    <!-- build:js scripts/main.js -->
+    <script src="scripts/main.js"></script>
+    <!--endbuild-->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
