--- a/app/studyabroad.html
+++ b/app/studyabroad.html
@@ -60,9 +60,9 @@
       <div class="container">
           <!--图区，广告-->
           <div class="pic">
-            <img class="wall" src="images/wall.png" alt="腾飞教育">
+            <img class="bg" src="images/wall.png" alt="腾飞教育">
             <!--文字广告区,>1200可见-->
-            <img class="slogan animated fadeIn" src="images/wall_text.png" alt="广告语">
+            <img class="slogan animated " src="images/wall_text.png" alt="广告语">
           </div>
           <!--腾飞留学介绍-->
           <div class="section">
@@ -341,7 +341,9 @@
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
     <!-- endbuild -->
-    
+    <!-- build:js scripts/ad.js -->
+    <script src="scripts/ad.js"></script>
+    <!--endbuild-->
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
